unpackaged/main/default/objects/Patient_Visit_Survey__c/Patient_Visit_Survey__c.object-meta.xml
<CustomObject>
    <label>Patient Visit Survey</label>
    <nameField>
        <displayFormat>PSV-{0000000}</displayFormat>
        <label>Patient Visit Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Visit Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>