unpackaged/main/default/objects/Patient_Visit_Survey__c/fields/LC__c.field-meta.xml
<CustomField>
    <fullName>LC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Visit Survey (LC)</relationshipLabel>
    <relationshipName>LC_Visit_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>