unpackaged/main/default/objects/Patient_Visit_Survey__c/fields/LCP__c.field-meta.xml
<CustomField>
    <fullName>LCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LCP</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Visit Surveys(LCP)</relationshipLabel>
    <relationshipName>Patient_Visit_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>