unpackaged/main/default/objects/Patient_Visit_Survey__c/fields/Link_to_Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Survey_Response__c</fullName>
    <label>Link to Survey Response</label>
    <type>Url</type>
</CustomField>