unpackaged/main/default/objects/Patient_Visit_Survey__c/fields/Marketing_Comm_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Comm_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Comm Opt Out</label>
    <type>Checkbox</type>
</CustomField>