unpackaged/main/default/objects/Patient_Visit_Survey__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <label>NPS Score</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>