unpackaged/main/default/objects/Patient_Visit_Survey__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Visit Surveys</relationshipLabel>
    <relationshipName>Patient_Visit_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>