unpackaged/main/default/objects/Patient_Visit_Survey__c/fields/Survey_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_Date__c</fullName>
    <label>Survey Response Date</label>
    <type>Date</type>
</CustomField>